@@ -50,7 +50,6 @@
 package com.openexchange.tools.versit.converter;
 
 import static com.openexchange.tools.io.IOUtils.closeStreamStuff;
-
 import java.awt.Rectangle;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
@@ -81,17 +80,13 @@ import java.util.StringTokenizer;
 import java.util.TimeZone;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-
 import javax.activation.FileTypeMap;
-import javax.activation.MimetypesFileTypeMap;
 import javax.imageio.ImageIO;
 import javax.mail.internet.AddressException;
 import javax.mail.internet.IDNA;
 import javax.mail.internet.InternetAddress;
-
 import org.apache.commons.codec.DecoderException;
 import org.apache.commons.codec.net.QuotedPrintableCodec;
-
 import com.openexchange.exception.OXException;
 import com.openexchange.groupware.calendar.CalendarCollectionService;
 import com.openexchange.groupware.calendar.CalendarDataObject;
@@ -782,6 +777,47 @@ public class OXContainerConverter {
                     ComplexProperty(contactContainer, phones[idx][FAX], index[idx][FAX], value);
                 }
             }
+            // IM
+            else if ("IMPP".equals(property.name)) {
+                String value = property.getValue().toString();
+                if (null != value) {
+                    try {
+                        value = java.net.URLDecoder.decode(value, "UTF-8");
+                    } catch (UnsupportedEncodingException e) {
+                        LOG.debug("Error decoding IMPP value", e);
+                    }
+                }                
+                Parameter type = property.getParameter(P_TYPE);
+                boolean set = false;
+                if (null != type) {
+                    for (int j = 0; j < type.getValueCount() && false == set; j++) {
+                        String typeValue = type.getValue(j).getText();
+                        if (PARAM_HOME.equalsIgnoreCase(typeValue)) {
+                            /*
+                             * use IM 2 if possible
+                             */
+                            contactContainer.setInstantMessenger2(value);
+                            set = true;
+                        } else if (PARAM_WORK.equalsIgnoreCase(typeValue)) {
+                            /*
+                             * use IM 1 if possible
+                             */
+                            contactContainer.setInstantMessenger1(value);
+                            set = true;
+                        }
+                    }
+                }
+                /*
+                 * fill first available
+                 */
+                if (false == set) {
+                    if (false == contactContainer.containsInstantMessenger2()) {
+                        contactContainer.setInstantMessenger2(value);
+                    } else if (false == contactContainer.containsInstantMessenger1()) {
+                        contactContainer.setInstantMessenger1(value);
+                    }
+                }
+            }
             // EMAIL
             else if (P_EMAIL.equals(property.name)) {
                 final String value = property.getValue().toString();
@@ -823,7 +859,89 @@ public class OXContainerConverter {
                             throw new ConverterException(e);
                         }
                     } else {
-                        ComplexProperty(contactContainer, emails, emailIndex, value);
+                        Parameter type = property.getParameter(P_TYPE);
+                        int set = 0;
+                        if (null != type) {
+                            for (int j = 0; j < type.getValueCount() && 0 == set; j++) {
+                                String typeValue = type.getValue(j).getText();
+                                if (PARAM_HOME.equalsIgnoreCase(typeValue)) {
+                                    /*
+                                     * use email 2 if possible
+                                     */
+                                    if (contactContainer.containsEmail2()) {
+                                        // try to move somewhere else
+                                        if (false == contactContainer.containsEmail1()) {
+                                            contactContainer.setEmail1(contactContainer.getEmail2());
+                                        } else if (false == contactContainer.containsEmail3()) {
+                                            contactContainer.setEmail3(contactContainer.getEmail2());
+                                        } else {
+                                            LOG.debug("Can only save one 'home' email address, going to overwrite existing value.");
+                                        }
+                                    }
+                                    contactContainer.setEmail2(value);
+                                    set = 2;
+                                } else if (PARAM_WORK.equalsIgnoreCase(typeValue)) {
+                                    /*
+                                     * use email 1 if possible
+                                     */
+                                    if (contactContainer.containsEmail1()) {
+                                        // try to move somewhere else
+                                        if (false == contactContainer.containsEmail2()) {
+                                            contactContainer.setEmail2(contactContainer.getEmail1());
+                                        } else if (false == contactContainer.containsEmail3()) {
+                                            contactContainer.setEmail3(contactContainer.getEmail1());
+                                        } else {
+                                            LOG.debug("Can only save one 'work' email address, going to overwrite existing value.");                                           
+                                        }
+                                    }
+                                    contactContainer.setEmail1(value);
+                                    set = 1;
+                                } else if ("other".equalsIgnoreCase(typeValue)) {
+                                    /*
+                                     * use email 3 if possible
+                                     */
+                                    if (contactContainer.containsEmail3()) {
+                                        // try to move somewhere else
+                                        if (false == contactContainer.containsEmail1()) {
+                                            contactContainer.setEmail1(contactContainer.getEmail3());
+                                        } else if (false == contactContainer.containsEmail2()) {
+                                            contactContainer.setEmail2(contactContainer.getEmail3());
+                                        } else {
+                                            LOG.debug("Can only save one 'other' email address, going to overwrite existing value.");                                           
+                                        }
+                                    }
+                                    contactContainer.setEmail3(value);
+                                    set = 3;
+                                }
+                            }
+                        }
+                        /*
+                         * fill first available
+                         */
+                        if (0 == set) {
+                            if (false == contactContainer.containsEmail1()) {
+                                contactContainer.setEmail1(value);
+                                set = 1;
+                            } else if (false == contactContainer.containsEmail2()) {
+                                contactContainer.setEmail2(value);
+                                set = 2;
+                            } else if (false == contactContainer.containsEmail3()) {
+                                contactContainer.setEmail3(value);
+                                set = 3;
+                            }
+                        }
+                        /*
+                         * mark default address if defined
+                         */
+                        if (0 < set && null != type) {
+                            for (int j = 0; j < type.getValueCount(); j++) {
+                                if ("pref".equalsIgnoreCase(type.getValue(j).getText())) {
+                                    contactContainer.setDefaultAddress(set);
+                                    break;
+                                }
+                            }
+                        }
+//                        ComplexProperty(contactContainer, emails, emailIndex, value);
                     }
                 } else {
                     // fix for: 7719
@@ -1666,9 +1784,12 @@ public class OXContainerConverter {
             addProperty(object, P_TEL, P_TYPE, new String[] { "isdn" }, contact.getTelephoneISDN());
             addProperty(object, P_TEL, P_TYPE, new String[] { "pager" }, contact.getTelephonePager());
             // EMAIL
-            addProperty(object, P_EMAIL, contact.getEmail1());
-            addProperty(object, P_EMAIL, contact.getEmail2());
-            addProperty(object, P_EMAIL, contact.getEmail3());
+            addProperty(object, P_EMAIL, P_TYPE, 1 == contact.getDefaultAddress() ? 
+                new String[] { "INTERNET", PARAM_WORK, "pref" } : new String[] { "INTERNET", PARAM_WORK }, contact.getEmail1());
+            addProperty(object, P_EMAIL, P_TYPE, 2 == contact.getDefaultAddress() ? 
+                new String[] { "INTERNET", PARAM_HOME, "pref" } : new String[] { "INTERNET", PARAM_HOME }, contact.getEmail2());
+            addProperty(object, P_EMAIL, P_TYPE, 3 == contact.getDefaultAddress() ? 
+                new String[] { "INTERNET", "pref", "other" } : new String[] { "INTERNET", "other" }, contact.getEmail3());
             // MAILER is ignored
             // TZ is ignored
             // GEO is ignored
@@ -1740,6 +1861,9 @@ public class OXContainerConverter {
         addProperty(object, "URL", contact.getURL());
         // UID
         addProperty(object, "UID", contact.getUid());
+        // IMPP
+        addProperty(object, "IMPP", P_TYPE, new String[] { PARAM_WORK }, contact.getInstantMessenger1());
+        addProperty(object, "IMPP", P_TYPE, new String[] { PARAM_HOME }, contact.getInstantMessenger2());
         // TODO CLASS
         // KEY is ignored
         return object;
