@@ -1,3 +1,7 @@
+* 2012-08-14 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 22730: Added support for IMPP parameters, added mapping for different email fields  
+ 
 * 2012-08-14 - marcus.klein@open-xchange.com
 
  - Fix for bug 22779: Preventing NullPointerException if some SOAP values are empty.
